using System.Collections;
using System.Collections.Generic;
using UnityEngine;

/// <summary>
/// inputEnum es un enum para acceder a los distintos inputs de una forma cómoda y óptima.
/// </summary>
public enum inputEnum
{
    Jump,
    Right,
    Left,
    Down,
    Up,
    PrimaryAttack,
    SecundaryAttack,
    ShowMinimap,
    Roll,
    Pause,
    Interact,
    Previous,
    Next,
    Enter_equip,
    Cancel,
    Accept,
}
